# motis

modules/gbfs_new_valhalla/: CMakeLists.txt
modules/gbfs_new_valhalla/include/motis/gbfs_new_valhalla/: gbfs_new_valhalla.h
modules/gbfs_new_valhalla/src/: gbfs_new_valhalla.cc
modules/mcraptor/include/motis/mcraptor/: additional_start.h  bag.h  label.h  raptor_search.h  reconstructor.h
modules/mcraptor/src/: raptor.cc
modules/mcraptor/src/cpu/: cpu_raptor.cc
protocol/gbfs/: GBFSRoutingResponse.fbs
ui/web/public/externalScripts/: main.js
ui/web/src/models/: ConnectionContent.ts
ui/web/src/services/: MOTISPostService.ts
ui/web/src/views/: ConnectionSearch.vue
